Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0
-
None
-
All
-
2b287c7c210ac708c0f8872e51517e0d46380ad3 (qtbase)
Description
Start Qt Designer, note warnings:
QMetaProperty::read: Unable to handle unregistered datatype 'QFontDatabase::WritingSystem' for property 'QFontComboBox::writingSystem' QMetaProperty::read: Unable to handle unregistered datatype 'QSizePolicy::Policy' for property 'Spacer::sizeType'
Attachments
Issue Links
- resulted from
-
QTBUG-33577 Non-local enums inside Q_PROPERTY should be accepted by QML
-
- Closed
-
For Gerrit Dashboard: QTBUG-35657 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
74365,3 | Fix regression in property handling with enums from gadgets | dev | qt/qtbase | Status: MERGED | +2 | 0 |