tests/auto/tools/moc/moc.pro
@@ -25,7 +25,9 @@ HEADERS += using-namespaces.h no-keywords.h task87883.h c-comments.h backslash-n
            function-with-attributes.h \
            plugin_metadata.h \
            single-quote-digit-separator-n3781.h \
-           related-metaobjects-in-namespaces.h
+           related-metaobjects-in-namespaces.h \
+           qtbug-35657-gadget.h \
+           related-metaobjects-in-gadget.h
 
 
 if(*-g++*|*-icc*|*-clang*|*-llvm):!irix-*:!win32-*: HEADERS += os9-newlines.h win-newlines.h
