tests/auto/tools/moc/qtbug-35657-gadget.h
@@ -3,7 +3,7 @@
 ** Copyright (C) 2013 Digia Plc and/or its subsidiary(-ies).
 ** Contact: http://www.qt-project.org/legal
 **
-** This file is part of the tools applications of the Qt Toolkit.
+** This file is part of the test suite of the Qt Toolkit.
 **
 ** $QT_BEGIN_LICENSE:LGPL$
 ** Commercial License Usage
@@ -39,50 +39,13 @@
 **
 ****************************************************************************/
 
-#ifndef GENERATOR_H
-#define GENERATOR_H
+#include <QObject>
 
-#include "moc.h"
-
-QT_BEGIN_NAMESPACE
-
-class Generator
-{
-    FILE *out;
-    ClassDef *cdef;
-    QVector<uint> meta_data;
-public:
-    Generator(ClassDef *classDef, const QList<QByteArray> &metaTypes, const QHash<QByteArray, QByteArray> &knownQObjectClasses, const QHash<QByteArray, QByteArray> &knownGadgets, FILE *outfile = 0);
-    void generateCode();
-private:
-    bool registerableMetaType(const QByteArray &propertyType);
-    void registerClassInfoStrings();
-    void generateClassInfos();
-    void registerFunctionStrings(const QList<FunctionDef> &list);
-    void generateFunctions(const QList<FunctionDef> &list, const char *functype, int type, int &paramsIndex);
-    void generateFunctionRevisions(const QList<FunctionDef>& list, const char *functype);
-    void generateFunctionParameters(const QList<FunctionDef> &list, const char *functype);
-    void generateTypeInfo(const QByteArray &typeName, bool allowEmptyName = false);
-    void registerEnumStrings();
-    void generateEnums(int index);
-    void registerPropertyStrings();
-    void generateProperties();
-    void generateMetacall();
-    void generateStaticMetacall();
-    void generateSignal(FunctionDef *def, int index);
-    void generatePluginMetaData();
-    QMultiMap<QByteArray, int> automaticPropertyMetaTypesHelper();
-    QMap<int, QMultiMap<QByteArray, int> > methodsWithAutomaticTypesHelper(const QList<FunctionDef> &methodList);
-
-    void strreg(const QByteArray &); // registers a string
-    int stridx(const QByteArray &); // returns a string's id
-    QList<QByteArray> strings;
-    QByteArray purestSuperClass;
-    QList<QByteArray> metaTypes;
-    QHash<QByteArray, QByteArray> knownQObjectClasses;
-    QHash<QByteArray, QByteArray> knownGadgets;
-};
-
-QT_END_NAMESPACE
-
-#endif // GENERATOR_H
+namespace QTBUG_35657 {
+    class A {
+        Q_GADGET
+        Q_ENUMS(SomeEnum)
+    public:
+        enum SomeEnum { SomeEnumValue = 0 };
+    };
+}
